# C

./: README.md
Santa/Dynamic Memory Management/: CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  create_arrays.c  create_arrays.h  int_array.c  int_array.h  main.c
Santa/allgemein/: datestruct.cpp  struct.cpp
Santa/allgemein/pointers/: string_manipulation.cpp
Santa/exercise 3/Count Matching Elements/Count Matching Elements/: Source.cpp
Santa/exercise 3/Count Matching Elements/Count Matching Elements/x64/Debug/: Count Matching Elements.exe.recipe  Count Matching Elements.ilk  vc143.idb
Santa/exercise 3/Find Maximum/Find Maximum/: Source.cpp
Santa/exercise3/: MathematicalFunc.c  TotalResistance.c
Santa/pointers/: initialize_arrays.cpp  string_manipulation.cpp
Santa/strings/: cstring.c  cstring.cpp  string1.c  string1.cpp  string2.cpp
Santa/structs/: datestruct.cpp  student_database.c
Zingerle/: 2sem_1stEX_solution.c  Array2dim1x1.cpp  Array3dim.cpp  TPalindrom.cpp  Tarray.cpp  TmittleresWort.cpp  Tratespiel.cpp  a.out  ex.c
Zingerle/Array01_int/Array01_int/: Quelle.cpp
Zingerle/Array02_zahleneinlesen/Array02_zahleneinlesen/: Quelle.cpp
Zingerle/Ausgabe_ungerader_Zahlen/Ausgabe_ungerader_Zahlen/: Quelle.cpp
Zingerle/FibonacciFolge/FibonacciFolge/: Quelle.cpp
Zingerle/KleinsterGemeinsamerTeiler/KleinsterGemeinsamerTeiler/: Quelle.cpp
Zingerle/TaschenrechnerA42/TaschenrechnerA42/x64/Debug/: TaschenrechnerA42.exe.recipe  TaschenrechnerA42.ilk  vc143.idb
Zingerle/Wechselautomat/Wechselautomat/Wechselautomat/: Quelle.cpp
(+23 files in other folders)
